    - f|[*] = [*] if f accepts [*0]
    - f&&[+] = f if f rejects [*0]
    - b:b[*i..j] = b[*max(i,1)..j]
    - b[*i..j]:b[*k..l] = b[*max(i,1)+max(k,1)-1, j+l-1]

  - The HOA parser is a bit smarter when merging multiple initial
    states into a single initial state (Spot's automaton class
    supports only one): it now reuse the edges leaving initial states
    without incoming transitions.

  - spot::bdd_to_cnf_formula() is a new variant of spot::bdd_to_formula()
    that converts a BDD into a CNF instead of a DNF.

  - spot::relabel_bse() has been improved to better deal with more
    cases.  For instance '(a & b & c) U (!c & d & e)' is now
    correctly reduced as '(p0 & p1) U (!p1 & p2)', and
    '((a & !b) | (a->b)) U c' now becomes '1 U c'. (Issue #540.)

  - spot::relabel_overlapping_bse() is a new function that will
    replace boolean subformulas by fresh atomic propositions even if
    those subformulas share atomic propositions.

  - spot::translate() has a new -x option "relabel-overlap=M" that
    augments the existing "relabel-bool=N".  By default, N=4, M=8.
    When the formula to translate has more than N atomic propositions,
    relabel_bse() is first called to attempt to rename non-overlaping
    boolean subexpressions (i.e., no shared atomic proposition) in
    order to reduce the number of atomic proposition, a source of
    explonential explosion in several places of the translation
    pipeline.  This relabel-bool optimization exists since Spot 2.4.
    The new feature is that if, after relabel-bool, the formula still
    has more than M atomic propositions, then spot::translate() now
    attempts to relabel boolean subexpressions even if they have
    overlapping atomic propositions, in an attempt to reduce the
    number of atomic proposition even more.  Doing so has the slightly
    unfortunate side effect of hindering some simplifications (because
    the new atomic propositions hide their interactions), but it